# LieOdyssey

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/cmake/: cmake_uninstall.cmake.in  lie_odysseyConfig.cmake.in
cpp/examples/: CMakeLists.txt  se32_gps_iekf.cpp
cpp/include/lie_odyssey/: config.hpp  imu_preprocessor.hpp  imu_preprocessor_liepp.hpp  lie_adapter.hpp  lie_odyssey.hpp  version.hpp.in
cpp/include/lie_odyssey/backends/: liepp_groups.hpp  manif_groups.hpp  sophus_groups.hpp
cpp/include/lie_odyssey/core/: groups.hpp  imu_data.hpp  imu_preprocessor.hpp  preintegrator.hpp  preintegrator_sgal3.hpp  preintegrator_traits.hpp
cpp/include/lie_odyssey/ekf/: base_filter.hpp  ekf_ins.hpp  esekf.hpp  iekf.hpp  iesekf.hpp
cpp/src/: imu_preprocessor.cpp  main.cpp
cpp/src/core/: imu_preprocessor.cpp
cpp/test/: CMakeLists.txt  test_core.cpp  test_groups.cpp  test_iekf.cpp  test_iesekf.cpp  test_liepp_groups.cpp  test_manif_groups.cpp  test_preintegrator.cpp
ros/gilda_lio/: CMakeLists.txt  README.md  package.xml
ros/gilda_lio/config/: kitti.yaml  ona.yaml  params.yaml
ros/gilda_lio/config/rviz/: limo.rviz
ros/gilda_lio/include/: ros_visuals.hpp
ros/gilda_lio/include/gilda_lio/: ekf.hpp  gauss_ivox.hpp  map.hpp  odometry_core.hpp  profiler.hpp  state.hpp  types.hpp
ros/gilda_lio/launch/: gilda_lio.launch.py  kitti.launch.py
ros/gilda_lio/src/: ekf.cpp  odometry_core.cpp  odometry_node.cpp  state.cpp
ros/ins_ros/: CMakeLists.txt  package.xml
ros/ins_ros/include/ins_ros/: baro_handler.hpp  ekf.hpp  gps_handler.hpp  mag_handler.hpp  state.hpp  wheel_handler.hpp
ros/ins_ros/src/: baro_handler.cpp  ekf.cpp  gps_handler.cpp  mag_handler.cpp  wheel_handler.cpp
ros/lidar_odometry_ros/: CMakeLists.txt  package.xml
ros/lidar_odometry_ros/config/: kitti.yaml  params.yaml
ros/lidar_odometry_ros/config/rviz/: limo.rviz
ros/lidar_odometry_ros/include/lidar_odometry_ros/: common.hpp
ros/lidar_odometry_ros/include/lidar_odometry_ros/modules/: localizer.hpp  mapper.hpp
ros/lidar_odometry_ros/include/lidar_odometry_ros/modules/filters/: iesekf_se23.hpp  iesekf_se3.hpp  iesekf_se32.hpp  iesekf_sgal3.hpp  iesekf_so3.hpp
ros/lidar_odometry_ros/include/lidar_odometry_ros/objects/: match.hpp  octree.hpp  plane.hpp  state.hpp
ros/lidar_odometry_ros/include/lidar_odometry_ros/utils/: algorithms.hpp  config.hpp
ros/lidar_odometry_ros/launch/: kitti.launch.py  lidar_odometry_ros.launch.py
ros/lidar_odometry_ros/src/: localizer.cpp  mapper.cpp  match.cpp  plane.cpp  ros_node.cpp  state.cpp
ros/lidar_odometry_ros/src/filters/: iesekf_se23.cpp  iesekf_se3.cpp  iesekf_se32.cpp  iesekf_sgal3.cpp  iesekf_so3.cpp
ros/lie_odyssey_ros/: CMakeLists.txt  package.xml
ros/lio_ros/: CMakeLists.txt  README.md  package.xml
ros/lio_ros/config/: kitti.yaml  ona.yaml  params.yaml
ros/lio_ros/config/rviz/: limo.rviz
ros/lio_ros/include/lio_ros/: ekf.hpp  map.hpp  octree.hpp  odometry_core.hpp  profiler.hpp  state.hpp  types.hpp
ros/lio_ros/launch/: kitti.launch.py  lio_ros.launch.py
ros/lio_ros/src/: ekf.cpp  odometry_core.cpp  odometry_node.cpp  state.cpp
